# maplesat-rust

./: .gitignore  Cargo.toml
src/: main.rs
src/models/: clause.rs  lbool.rs  lit.rs  mod.rs  solver.rs  var.rs  var_data.rs
src/services/: dimacs.rs  mod.rs  solver.rs
